--- a/Proyecto_Sistemas_Programables/Properties/Resources.resx
+++ b/Proyecto_Sistemas_Programables/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="ventilador6-3870285687" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ventilador6-3870285687.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="depositphotos_174335366-stock-photo-cute-cloud-rain-kawaii-face-3363758100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\depositphotos_174335366-stock-photo-cute-cloud-rain-kawaii-face-3363758100.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
