--- a/Proyecto_Sistemas_Programables/Properties/Resources.resx
+++ b/Proyecto_Sistemas_Programables/Properties/Resources.resx
@@ -118,43 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Imagen5" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Imagen5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Imagen1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Imagen1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="hogar-sostenible" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hogar-sostenible.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Imagen6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Imagen6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ventana abierta" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ventana abierta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Imagen4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Imagen4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Imagen2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Imagen2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="foco blanco apagado" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\foco blanco apagado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="ventilador6-3870285687" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ventilador6-3870285687.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="foco amarillo encendido" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\foco amarillo encendido.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="ventana cerrada" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ventana cerrada.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="foco blanco encendido" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\foco blanco encendido.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="foco amarillo apagado" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\foco amarillo apagado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="depositphotos_174335366-stock-photo-cute-cloud-rain-kawaii-face-3363758100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\depositphotos_174335366-stock-photo-cute-cloud-rain-kawaii-face-3363758100.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
