cambios en interfaz configuracion

--- a/Proyecto_Sistemas_Programables/Properties/Resources.resx
+++ b/Proyecto_Sistemas_Programables/Properties/Resources.resx
@@ -151,13 +151,16 @@
   <data name="ventilador6-3870285687" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ventilador6-3870285687.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="foco amarillo apagado" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\foco amarillo apagado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="foco blanco encendido" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\foco blanco encendido.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Imagen51" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Imagen5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="foco amarillo apagado" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\foco amarillo apagado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="image-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\image-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
